--- a/_config.yml
+++ b/_config.yml
@@ -254,7 +254,7 @@ duoshuo_shortname: xuehuihe-java
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: J07Rx2NjTiwjIyxdGuCALSCM2Kzq294kYmnj1f4Izoc
 
 
 # Google Analytics
